<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<EditText
		android:id="@+id/editText_Your_Email"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:ems="10"
		android:hint="@string/hint_email"
		android:inputType="textWebEmailAddress|textPersonName|textEmailAddress" />

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="150dp"
		app:srcCompat="@drawable/animal"/>

	<TextView
		android:id="@+id/textView_Select_item"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/spiner_text"
		android:textAlignment="textEnd" />

	<Spinner
		android:id="@+id/spinner_Select_item"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:entries="@array/list_instruments"
        />

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="150dp"
		android:layout_height="150dp"
		android:layout_gravity="center_horizontal" />

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/textView_Order_Price"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="50dp"
			android:text="@string/order_price"
			android:textAlignment="center" />

		<TextView
			android:id="@+id/textView_Current_price"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textView_Order_Price"
			android:layout_alignLeft="@+id/textView_Order_Price"
			android:layout_alignRight="@+id/textView_Order_Price"
			android:layout_marginTop="10dp"
			android:text="@string/current_price"
			android:textAlignment="center" />

		<TextView
			android:id="@+id/textView_Quantity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_marginRight="50dp"
			android:text="@string/quantity"
			android:textAlignment="center" />

		<TextView
			android:id="@+id/textView_Current_quantity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/textView_Quantity"
			android:layout_alignLeft="@+id/textView_Quantity"
			android:layout_alignRight="@+id/textView_Quantity"
			android:layout_marginTop="10dp"
			android:text="@string/current_quantity"
			android:textAlignment="center" />

		<Button
			android:id="@+id/button_dec_quantity"
			android:onClick="dec_quantity"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_below="@+id/textView_Quantity"
			android:layout_toLeftOf="@+id/textView_Current_quantity"
			android:text="@string/button_text_dec" />

		<Button
			android:id="@+id/button_inc_quantity"
			android:onClick="inc_quantity"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_toRightOf="@+id/textView_Current_quantity"
			android:layout_below="@+id/textView_Quantity"
			android:text="@string/button_text_inc" />
	</RelativeLayout>

	<Button
		android:id="@+id/button_Check_order"
		android:onClick="Check_order"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/button_text_check" />
</LinearLayout>